first walk thru

--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -19,10 +19,20 @@ update them on batches, or all at the same time, to:
 
 == Before You Begin
 
-Before you perform any upgrade,
+Before you perform any proxy upgrade, schedule a maintenance window.
+The clients registered to {productname} via the proxy will not be able checking in with {productname} for that period of time.
 
+
+
+== Update the Proxy
 
 .Procedure: Updating the {productname} Proxy
 
-. xxx
+. From the {productname} Server, where the Proxy is registered as a client, send the [command]``spacewalk-proxy stop`` command.
 
+. Select the packages to be updated on the Proxy.
+
+. From the {productname} Server, where the Proxy is registered as a client, send the [command]``spacewalk-proxy start`` command.
+
+It is recommended to create an action chain of this command sequence.
+Then you can apply it to several proxies to update them in batches or all at the same time.
