Kubernetes page minor fixes

--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -8,16 +8,9 @@
 
 The prerequisites listed below should be met before proceeding.
 
-* At least one _Kubernetes_ or _SUSE CaaS Platform _ cluster available on your network
+* At least one Kubernetes or SUSE CaaS Platform cluster available on your network
 * {productname} configured for container management
-+
-
-[NOTE]
-====
-Required channels are present, a registered container build host available, etc.
-====
-+
-
+(required channels are present, a registered container build host available, etc.)
 * [package]#virtual-host-gatherer-Kubernetes# package installed on your {productname} server
 
 
@@ -27,13 +20,8 @@ Required channels are present, a registered container build host available, etc.
 
 
 * Kubernetes version 1.5.0 or higher.
-Alternatively use SUSE CaaS Platform _(SUSE CaaS Platform includes Kubernetes 1.5.0 by default)_
+Alternatively, you can use SUSE CaaS Platform
 * Docker version 1.12 or higher on the container build host
-
-[NOTE]
-====
-To enable all Kubernetes related features within the {webui}, the [package]#virtual-host-gatherer-Kubernetes# package must be installed.
-====
 
 
 
@@ -133,7 +121,6 @@ Under the `Overview` tab, notice the data in `Runtime` and `Instances` fields un
 ** Pod name
 ** Namespace which the pod resides in
 ** The runtime status of the container in the specific pod.
-For more about status icons, see the next section.
 
 
 
@@ -183,6 +170,6 @@ verbs: ["list"]
 ----
 
 
-Due to a a 403 response from ``/pods``, the entire cluster will be ignored by {productname}.
+Due to a 403 response from ``/pods``, the entire cluster will be ignored by {productname}.
 
 For more information on working with RBAC Authorization, see https://kubernetes.io/docs/admin/authorization/rbac/.
