Rework ES/RHEL/CentOS doc

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -19,6 +19,7 @@ ifndef::backend-pdf[]
 *** xref:disconnected-setup.adoc[Disconnected Setup]
 // Non-SUSE Clients
 ** xref:non-suse-clients.adoc[Other Clients]
+*** xref:clients-sleses.adoc[Expanded Support Clients]
 *** xref:clients-rh.adoc[Red Hat Clients]
 *** xref:clients-centos.adoc[CentOS Clients]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
@@ -88,6 +89,8 @@ include::modules/client-configuration/pages/disconnected-setup.adoc[leveloffset=
 // Non-SUSE Clients
 
 include::modules/client-configuration/pages/non-suse-clients.adoc[leveloffset=+1]
+
+include::modules/client-configuration/pages/clients-sleses.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
 
