WIP: Update clients-rh.adoc

--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -6,25 +6,7 @@ This section contains information about registering traditional and Salt clients
 
 
 
-== Set up a {rhel} Client
-
-Ensure that your client meets these requirements before you start:
-
-* 8{nbsp}GB RAM or more
-* Two or more physical or virtual CPU cores
-* Access to {rhel} installation and subscription media
-* An LVM or an NFS mount is recommended
-
-You will need to ensure you provision enough disk space.
-The [path]``/var/spacewalk`` directory contains all mirrored RPMs,  and can take a significant amount of disk space.
-For example, the {rhel}{nbsp}6 x86_64 channels require over 90{nbsp}GB.
-
-Taskomatic will use one CPU core, and requires at least 3072{nbsp}MB RAM.
-To ensure that Taskomatic has access to enough memory, open the [path]``/etc/rhn/rhn.conf`` configuration file, and add this line:
-
-----
-taskomatic.java.maxmemory=3072
-----
+== Server requirements
 
 [WARNING]
 ====
@@ -33,7 +15,20 @@ You must obtain support from either Red Hat or {suse} for all your RHEL systems.
 If you do not do this, you might be violating your terms with Red Hat.
 ====
 
+Ensure that your server meets the requirements outlined at installation:hardware-requirements.adoc
 
+Taskomatic will use one CPU core, and requires at least 3072{nbsp}MB RAM.
+
+To ensure that Taskomatic has access to enough memory, open the [path]``/etc/rhn/rhn.conf`` configuration file, add this line:
+
+----
+taskomatic.java.maxmemory=3072
+----
+
+And restart Taskomatic:
+----
+systemctl restart taskomatic
+----
 
 == {rhel} Channel Management
 
