edits per feedback

--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -35,7 +35,7 @@ The branch ID is the unique identifier for the branch server that the terminal i
 You can configure this value in the PXE formula settings for the branch server.
 
 The manufacturer, product name, and serial number are provided by the terminal hardware BIOS.
-If the terminal does not provide a serial number, it will be replaced in the terminal name with a hyphen (``-``).
+If the terminal does not provide a serial number, it will be omitted from the terminal name.
 
 The unique ID is the first four characters of a generated machine identification number.
 You can disable this behavior by toggling the [systemitem]``DISABLE_UNIQUE_SUFFIX`` parameter in the PXE formula settings.
