--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -32,7 +32,12 @@ ifndef::backend-pdf[]
 ifeval::[{suma-content} == true]
 ** xref:creating-a-tools-repository.adoc[Creating a Tools Repository]
 endif::[]
-** xref:contact-methods.adoc[Client Contact Methods]
+// Contact Methods
+** xref:contact-methods-intro.adoc[Client Contact Methods]
+*** xref:contact-methods-rhnsd.adoc[rhnsd]
+*** xref:contact-methods-pushssh.adoc[Push via SSH]
+*** xref:contact-methods-saltssh.adoc[Push via Salt SSH]
+*** xref:contact-methods-osad.adoc[OSAD]
 ** xref:using-ssm.adoc[Using the System Set Manager]
 // Troubleshooting
 ** xref:tshoot-clients.adoc[Troubleshooting Clients]
@@ -104,7 +109,16 @@ include::modules/client-configuration/pages/channels.adoc[leveloffset=+1]
 
 include::modules/client-configuration/pages/creating-a-tools-repository.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/contact-methods.adoc[leveloffset=+1]
+// Contact Methods
+include::modules/client-configuration/pages/contact-methods-intro.adoc[leveloffset=+1]
+
+include::modules/client-configuration/pages/contact-methods-rhnsd.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/contact-methods-pushssh.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/contact-methods-saltssh.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/contact-methods-osad.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/using-ssm.adoc[leveloffset=+1]
 
