--- a/modules/client-configuration/pages/contact-methods-rhnsd.adoc
+++ b/modules/client-configuration/pages/contact-methods-rhnsd.adoc
@@ -1,5 +1,5 @@
 [[contact-methods-rhnsd]]
-= {productname} Daemon (rhnsd)
+= SUSE Manager Daemon (rhnsd)
 
 
 The {productname} daemon ([command]``rhnsd``) runs on traditional client systems and periodically connects with {productname} to check for new updates and notifications.
@@ -25,7 +25,7 @@ image::rhnsd-taigon.png[scaledwidth=80]
 
 
 
-=== Configure rhnsd
+== Configure rhnsd
 
 The `rhnsd` initialization script has a configuration file on the client system at [path]``/etc/sysconfig/rhn/rhnsd``.
 
