--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -22,9 +22,6 @@ include::./branding/pdf/entities.adoc[]
 :toclevels: 2
 :doctype: book
 
-// License
-include::modules/upgrade/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
-
 // Upgrade Overview
 include::modules/upgrade/pages/upgrade-overview.adoc[leveloffset=+1]
 
@@ -37,11 +34,11 @@ include::modules/upgrade/pages/migrate-3x-4x.adoc[leveloffset=+1]
 // Migration from Version 4x to 4x
 include::modules/upgrade/pages/migrate-4x-4x.adoc[leveloffset=+1]
 
+// Proxy Migration
+include::modules/upgrade/pages/proxy-migration.adoc[leveloffset=+1]
+
 // Client Migration
 include::modules/upgrade/pages/client-migration.adoc[leveloffset=+1]
-
-// Service pack Migration Intro
-include::modules/upgrade/pages/sp-migration.adoc[leveloffset=+1]
 
 // Database Migration
 include::modules/upgrade/pages/db-migration.adoc[leveloffset=+1]
@@ -51,5 +48,8 @@ include::modules/upgrade/pages/troubleshooting.adoc[leveloffset=+1]
 
 // Upgrade Script Example
 include::modules/upgrade/pages/upgrade-script-example.adoc[leveloffset=+1]
+
+// License
+include::modules/upgrade/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 
 endif::[]
