light edit to intro

--- a/modules/client-configuration/pages/contact-methods-intro.adoc
+++ b/modules/client-configuration/pages/contact-methods-intro.adoc
@@ -7,14 +7,9 @@ Which one you use depends on your network architecture.
 The {productname} daemon ([command]``rhnsd``) runs on traditional client systems and periodically connects with {productname} to check for new updates and notifications.
 It does not apply to Salt clients.
 
-Push via SSH is used in environments where traditional clients cannot reach the {productname} Server directly.
-In this environment, clients are located in a firewall-protected zone called a DMZ.
-No system within the DMZ is authorized to open a connection to the internal network, including the {productname} Server.
-
-Push via Salt SSH is used in environments where Salt clients cannot reach the {productname} Server directly.
+Push via SSH and Push via Salt SSH are used in environments where clients cannot reach the {productname} Server directly.
 In this environment, clients are located in a firewall-protected zone called a DMZ.
 No system within the DMZ is authorized to open a connection to the internal network, including the {productname} Server.
 
 OSAD is an alternative contact method between {productname} and its clients.
-By default, {productname} uses [systemitem]``rhnsd``, which contacts the server every four hours to execute scheduled actions.
 OSAD allows registered client systems to execute scheduled actions immediately.
