remove sles12 upgrade instructions

--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -1,11 +1,16 @@
 [[client-migration]]
 = Client Migration
 
+////
 Upgrading traditional clients from earlier {slea}{nbsp}12 Service Packs to later {slea}{nbsp}12 Service Packs is fully automated.
 For example, upgrading from {slea}{nbsp}12{nbsp}SP1 to {slea}{nbsp}12{nbsp}SP4.
 This also applies for other supported products based on {slea}{nbsp}12.
 
-Upgrading traditional clients from {slea}{nbsp}12 with the latest Service Pack to {slea}{nbsp}15 is also automated, but you will need to do some preparation steps before you can upgrade.
+////
+
+Upgrading traditional clients from {slea}{nbsp}12 with the latest Service Pack to {slea}{nbsp}15 is automated, but you will need to do some preparation steps before you can upgrade.
+
+Upgrading traditional clients from earlier {slea}{nbsp}15 Service Packs to later {slea}{nbsp}15 Service Packs is fully automated.
 
 For supported {sle}{nbsp}15 upgrade paths, see  https://www.suse.com/documentation/sles-15/book_sle_upgrade/data/sec_upgrade-paths_supported.html
 
@@ -17,8 +22,6 @@ This process cannot be used to upgrade Salt clients.
 // Do we have Salt instructions somewhere? LKB 2019-08-22
 
 
-
-// We should probably split the SLE12->SLE12 and SLE12->SLE15 instructions. LKB 2019-08-22
 
 == Upgrade Clients from {slea}{nbsp}12 to {slea}{nbsp}15
 
@@ -119,6 +122,7 @@ PXE booting is not used during this process.
 Approximately three minutes after the job was fetched, the client will go down for reboot.
 
 
+////
 
 == Upgrade Clients within {slea}{nbsp}12
 
@@ -151,3 +155,5 @@ You can check the progress of the migration by navigating to menu:System Details
 If the system status reports that the migration has failed, but also shows that software updates are available, install the update and check the status again.
 
 After the migration is complete, schedule a reboot of the client from the {productname} Server.
+
+ ////
