--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -15,7 +15,7 @@ You must obtain support from either Red Hat or {suse} for all your RHEL systems.
 If you do not do this, you might be violating your terms with Red Hat.
 ====
 
-Ensure that your {productname} Server meets the requirements outlined at installation:hardware-requirements.adoc
+Ensure that your {productname} Server meets the requirements outlined at xref:installation:hardware-requirements.adoc[].
 
 Taskomatic will use one CPU core, and requires at least 3072{nbsp}MB RAM.
 
@@ -25,14 +25,14 @@ To ensure that Taskomatic has access to enough memory, open the [path]``/etc/rhn
 taskomatic.java.maxmemory=3072
 ----
 
-And restart Taskomatic:
+Restart Taskomatic:
 ----
 systemctl restart taskomatic
 ----
 
 == {rhel} Channel Management
 
-=== Adding {rhel} product from SCC
+=== Add {rhel} product from SCC
 
 Before you register {rhel} clients to your {productname} Server, check that you have the corresponding {rhel} product enabled, and the required channels are fully synchronized.
 
@@ -51,7 +51,7 @@ For more information on activation keys, see xref:client-configuration:clients-a
 
 There are two ways to check if a channel has finished synchronizing:
 
-* In the {productname}{webui}, navigate to menu:Admin[Setup Wizard] and select the menu:SUSE Products[] tab.
+* In the {productname} {webui}, navigate to menu:Admin[Setup Wizard] and select the menu:SUSE Products[] tab.
 This dialog displays a completion bar for each product when they are being synchronized.
 * You can also check the synchronization log file at the command prompt.
 Use the [command]``cat`` or [command]``tail -f`` command to view the [path]``/var/log/rhn/reposync/channel-label.log`` file.
@@ -66,7 +66,7 @@ For {rhel} clients, packages are contained on the {rhel} installation media.
 Ensure you have loop-mounted the installation media, and added it as a child channel to the base {rhel} channel.
 ====
 
-=== Adding {rhel} media
+=== Add {rhel} media
 
 The base {rhel} software channel does not contain any packages.
 This is because {suse} does not provide {rhel} base media.
