--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -7,7 +7,7 @@
 == Image Building Overview
 
 {productname} enables system administrators to build containers and OS Images and push the result in image stores.
-The process is clearly defined in the workflow:
+The workflow looks like this:
 
 1. Define an image stores
 2. Define an image profile and associate it with a source (Git or a directory)
