--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -9,7 +9,7 @@
 {productname} enables system administrators to build containers and OS Images and push the result in image stores.
 The workflow looks like this:
 
-1. Define an image stores
+. Define an image store
 2. Define an image profile and associate it with a source (Git or a directory)
 3. Build the image
 4. Push the image in the image store
