--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -11,7 +11,7 @@ The workflow looks like this:
 
 . Define an image store
 2. Define an image profile and associate it with a source (Git or a directory)
-3. Build the image
+. Build the image
 4. Push the image in the image store
 
 {productname} supports two distinct build types:
