--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -12,7 +12,7 @@ The workflow looks like this:
 . Define an image store
 2. Define an image profile and associate it with a source (Git or a directory)
 . Build the image
-4. Push the image in the image store
+. Push the image to the image store
 
 {productname} supports two distinct build types:
 
