--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -34,7 +34,7 @@ The containers feature is available for Salt clients running {sls} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
 * A published (public or private) Git repository (i.e. GitHub, GitLab or BitBucket) repository containing a Dockerfile and configuration scripts
-* A properly configured image store (i.e. Docker registry)
+* A properly configured image store, such as a Docker registry.
 +
 
 [NOTE]
