--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -79,7 +79,7 @@ salt '$your_client' state.highstate
 
 
 [[at.images.docker.buildchannels]]
-=== Create an Activation Key for containers
+=== Create an Activation Key for Containers
 
 
 The containers built using {productname} will use channel(s) associated to the Activation Key as repositories when building the image. This section will guide you into creating an ad-hoc Activation Key for this purpose.
