--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -372,7 +372,8 @@ This will result in an ``unknown`` update status.
 [[at.images.kiwi]]
 == OS Images
 
-OS Images are built by the Kiwi image system. The output image is customizable and can be: PXE, QCOW2, LiveCD images, and others.
+OS Images are built by the Kiwi image system. 
+The output image is customizable and can be PXE, QCOW2, LiveCD, or other types of images.
 
 For more information about the Kiwi build system, see the https://doc.opensuse.org/projects/kiwi/doc/[Kiwi documentation].
 
