--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -383,7 +383,7 @@ For more information about the Kiwi build system, see the https://doc.opensuse.o
 === Requirements
 
 The Kiwi image building feature is available for Salt clients running {sls}{nbsp}12.
-Starting from {sls}{nbsp}15, kiwi-ng will be used instead of the legacy Kiwi.
+From {sls}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
 
 Kiwi image configuration files and configuration scripts must be accessible in one of these locations:
 
