--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -256,7 +256,7 @@ _The repository version is determined by the Activation Key that you assigned to
 .Packages Required for Inspecting Your Images
 ====
 To inspect images and provide the package and product list of a container to the {productname} {webui} you must install [package]#python# and [package]#python-xml# within the container.
-Without these packages your images will still build, but the package and product list will be unavailable from the {webui}.
+If you do not install them, images will still build but the package and product list will not available in the {webui}.
 ====
 
 ----
