--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -104,7 +104,8 @@ For more information, see <<bp.key.managment>>.
 === Create an Image Store
 
 
-All built images will be pushed to an Image Store. This section will guide you in creating an Image Store for this purpose.
+All built images are pushed to an image store. 
+This section contains information about creating an image store.
 
 image::images_image_stores.png[scaledwidth=80%]
 
