--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -139,7 +139,8 @@ registry.example.com:5000/myregistry/myproject
 === Create an Image Profile
 
 
-All container image are built using an Image Profile: the profile contains the building instructions. This section will guide you into creating an image profile from the [guimenu]``Image Profile`` page.
+All container images are built using an image profile, which contains the building instructions. 
+This section contains information about creating an image profile with the {productname} {webui}.
 
 image::images_image_profiles.png[scaledwidth=80%]
 
