--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -163,7 +163,9 @@ If your container image tag is in a format such as `myproject/myimage`, make sur
 
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
 
-. Enter a GitHub, GitLab or BitBucket repository URL (http, https, or token authentication) in the [guimenu]``Path`` field using one of the following formats:
+. In the [guimenu]``Path`` field, type a GitHub, GitLab or BitBucket repository URL.
+The URL should be be http, https, or a token authentication URL.
+Use one of these formats:
 
 .GitHub Path Options
 * GitHub single user project repository
