--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -183,7 +183,7 @@ https://github.com/ORG/project.git#branchname:folder
 * GitHub token authentication
 +
 
-If your Git repository is private and not publicly accessible, you need to modify the profile's Git URL to include authentication.
+If your git repository is private, modify the profile's URL to include authentication.
 Use this URL format to authenticate with a GitHub token:
 +
 
