--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -393,7 +393,7 @@ Kiwi image configuration files and configuration scripts must be accessible in o
 * HTTP hosted tarball
 * Local Build Host directory
 
-An example of a complete Kiwi repo served by Git can be found at https://github.com/SUSE/manager-build-profiles/tree/master/OSImage
+For an example of a complete Kiwi repository served by git, see https://github.com/SUSE/manager-build-profiles/tree/master/OSImage
 
 [NOTE]
 .Hardware Requirements for Hosts Running OS Images
