--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -10,7 +10,7 @@
 The workflow looks like this:
 
 . Define an image store
-2. Define an image profile and associate it with a source (Git or a directory)
+. Define an image profile and associate it with a source (either a git repository or a directory)
 . Build the image
 . Push the image to the image store
 
