--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -33,7 +33,8 @@ image::image-building.png[scaledwidth=80%]
 The containers feature is available for Salt clients running {sls} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
-* A published (public or private) Git repository (i.e. GitHub, GitLab or BitBucket) repository containing a Dockerfile and configuration scripts
+* A published git repository repository containing a Dockerfile and configuration scripts.
+The repository can be public or private, and should be hosted on GitHub, GitLab, or BitBucket.
 * A properly configured image store, such as a Docker registry.
 +
 
