--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -241,7 +241,7 @@ When you associate an Activation Key with an image profile you are ensuring any 
 
 
 [[at.images.docker.sourceexample]]
-==== Example of Dockerfile sources
+.Example Dockerfile Sources
 
 
 An Image Profile that can be reused is published at https://github.com/SUSE/manager-build-profiles
