--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -253,7 +253,7 @@ The [option]``ARG`` parameters also allow you to build image versions of {sls} w
 
 For example: The [comand]``ARG repo`` parameter and the [command]``echo`` command pointing to the repository file, creates and then injects the correct path into the repository file for the desired channel version.
 
-_The repository version is determined by the Activation Key that you assigned to your image profile._
+The repository version is determined by the Activation Key that you assigned to your image profile.
 ====
 
 [NOTE]
