--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -258,7 +258,8 @@ The repository version is determined by the Activation Key that you assigned to 
 
 [NOTE]
 ====
-To inspect images and provide the package and product list of a container to the {productname} {webui} you must install [package]#python# and [package]#python-xml# within the container.
+The [package]#python# and [package]#python-xml# packages must be installed in the container.
+They are required for inspecting images, and for providing the package and product list of a container to the {productname} {webui}.
 If you do not install them, images will still build but the package and product list will not available in the {webui}.
 ====
 
