Docs: replace Git with git

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -105,7 +105,7 @@ For more information, see <<bp.key.managment>>.
 === Create an Image Store
 
 
-All built images are pushed to an image store. 
+All built images are pushed to an image store.
 This section contains information about creating an image store.
 
 image::images_image_stores.png[scaledwidth=80%]
@@ -140,7 +140,7 @@ registry.example.com:5000/myregistry/myproject
 === Create an Image Profile
 
 
-All container images are built using an image profile, which contains the building instructions. 
+All container images are built using an image profile, which contains the building instructions.
 This section contains information about creating an image profile with the {productname} {webui}.
 
 image::images_image_profiles.png[scaledwidth=80%]
@@ -210,7 +210,7 @@ https://gitlab.example.com/GROUP/project.git#master:/container/
 * GitLab token authentication
 +
 
-If your Git repository is private and not publicly accessible, you need to modify the profile's Git URL to include authentication.
+If your git repository is private and not publicly accessible, you need to modify the profile's git URL to include authentication.
 Use this URL format to authenticate with a GitLab token:
 +
 
@@ -220,7 +220,7 @@ https://gitlab-ci-token:<AUTHENTICATION_TOKEN>@gitlab.example.com/USER/project.g
 +
 
 [IMPORTANT]
-.Specifying a Git branch
+.Specifying a git branch
 ====
 If a branch is not specified, the `master` branch will be used by default.
 If a `folder` is not specified the image sources (Dockerfile sources) are expected to be in the root directory of the GitHub or GitLab checkout.
@@ -364,8 +364,8 @@ The status icon for the imported image can also be seen on the ``Overview`` tab 
 
 These are some known problems when working with images:
 
-* HTTPS certificates to access the registry or the Git repositories should be deployed to the client by a custom state file.
-* SSH Git access using Docker is currently unsupported.
+* HTTPS certificates to access the registry or the git repositories should be deployed to the client by a custom state file.
+* SSH git access using Docker is currently unsupported.
 * If the [package]#python# and [package]#python-xml# packages are not installed in your images during the build process, reporting of installed packages or products will fail.
 This will result in an ``unknown`` update status.
 
@@ -374,7 +374,7 @@ This will result in an ``unknown`` update status.
 [[at.images.kiwi]]
 == OS Images
 
-OS Images are built by the Kiwi image system. 
+OS Images are built by the Kiwi image system.
 The output image is customizable and can be PXE, QCOW2, LiveCD, or other types of images.
 
 For more information about the Kiwi build system, see the https://doc.opensuse.org/projects/kiwi/doc/[Kiwi documentation].
@@ -389,7 +389,7 @@ From {sls}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
 
 Kiwi image configuration files and configuration scripts must be accessible in one of these locations:
 
-* Git repository
+* git repository
 * HTTP hosted tarball
 * Local Build Host directory
 
@@ -530,7 +530,7 @@ image::images_image_create_profile_kiwi.png[scaledwidth=80%]
 . Use `Kiwi` as the [guimenu]``Image Type``.
 . Image store is automatically selected.
 . Enter a [guimenu]``Config URL`` to the directory containing the Kiwi configuration files:
-.. Git URI
+.. git URI
 .. HTTPS tarball
 .. Path to Build Host local directory
 . Select an [guimenu]``Activation Key``.
@@ -548,10 +548,10 @@ When you associate an Activation Key with an image profile you are ensuring any 
 
 
 .Source format options
-** Git/HTTP(S) URL to the repository
+** git/HTTP(S) URL to the repository
 +
 
-URL to the Git repository containing the sources of the image to be built.
+URL to the git repository containing the sources of the image to be built.
 Depending on the layout of the repository the URL can be:
 +
 ----
@@ -734,7 +734,7 @@ For more on how to refresh a public certificate RPM, see <<at.images.kiwi.buildh
 
 The section contains some known issues when working with images.
 
-* HTTPS certificates used to access the HTTP sources or Git repositories should be deployed to the client by a custom state file, or configured manually.
+* HTTPS certificates used to access the HTTP sources or git repositories should be deployed to the client by a custom state file, or configured manually.
 * Importing Kiwi-based images is not supported.
 
 
