edits per feedback

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -53,11 +53,16 @@ ifeval::[{uyuni-content} == true]
 ----
 zypper in spacewalk-utils
 ----
-. Add the {centos} base, updates, and client channels using the [command]``centos6-uyuni-client`` script:
+. Add the {centos} base, updates, and client channels using the [command]``spacewalk-common-channels`` script:
 +
+For {centos} 7:
 ----
-centos6-uyuni-client -u admin -p `secret` -a x86_64 'centos7'
-centos6-uyuni-client -u admin -p `secret` -a x86_64 'centos7-updates'
+spacewalk-common-channels centos7 centos7-updates centos7-uyuni-client
+----
++
+For {centos} 6:
+----
+spacewalk-common-channels centos6 centos6-updates centos6-uyuni-client
 ----
 
 endif::[]
