--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -27,7 +27,8 @@ It is important to perform hostname and IP configuration before you set up {prod
 * {productname} Server and Proxy instances need to run in a network configuration that provides you control over DNS entries, but cannot be accessed from the internet at large.
 * Within this network configuration DNS resolution must be provided: `hostname -f` must return the fully-qualified domain name (FQDN).
 * DNS resolution is also important for connecting clients.
-* DNS is dependent on the cloud framework you choose, refer to the cloud provider documentation for detailed instructions.
+* DNS is dependent on the cloud framework you choose.
+Refer to the cloud provider documentation for detailed instructions.
 * We recommend that you locate software repositories, the server database, and the proxy squid cache on an external virtual disk.
 This prevents data loss if the instance is unexpectedly terminated.
 This section includes instructions for setting up an external virtual disk.
