--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -37,7 +37,7 @@ This section includes instructions for setting up an external virtual disk.
 
 When you use {productname} on a public cloud, you must use a restricted network.
 We recommend using a VPC private subnet with an appropriate firewall setting.
-The instance must only be able to be accessed by machines in your specified IP ranges.
+Only machines in your specified IP ranges must be able to access the instance.
 
 [WARNING]
 ====
