--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -51,7 +51,7 @@ To access the {productname} {webui}, allow HTTPS when configuring the network ac
 == Separate Storage Volumes
 
 We recommend that the repositories and the database for {productname} are stored on a seperate storage device.
-This will help to avoid data loss in cases where the {productname} instance is terminated.
+This will help to avoid data loss in cases when the {productname} instance is terminated.
 You must set this up before you run the YaST {productname} setup procedure.
 
 Provision a disk device in the public cloud environment, according the cloud provider's documentation.
