--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -52,7 +52,7 @@ To access the {productname} {webui}, allow HTTPS when configuring the network ac
 
 We recommend that the repositories and the database for {productname} are stored on a seperate storage device.
 This will help to avoid data loss in cases when the {productname} instance is terminated.
-You must set this up before you run the YaST {productname} setup procedure.
+You must set up the storage device before you run the YaST {productname} setup procedure.
 
 Provision a disk device in the public cloud environment, according the cloud provider's documentation.
 The size of the disk is dependent on the number of distributions and channels you intend to manage with {productname}.
