--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -77,5 +77,5 @@ azuremetadata --instance-name
 
 [IMPORTANT]
 ====
-When you have logged in to the administrator account for the first time, change the default pasword to protect your account.
+When you have logged in to the administrator account for the first time, change the default password to protect your account.
 ====
