edits per feedback

--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -1,7 +1,7 @@
 [[space-management]]
 = Managing Disk Space
 
-Running out of disk space can have a severe impact on the {productname} database and file structure which, in most cases, is not recoverable.
+Running out of disk space can have a severe impact on the {productname} database and file structure which, in some cases, is not recoverable.
 
 {productname} monitors some directories for free disk space.
 You can modify which directories are monitored, and the warnings that are created.
@@ -15,7 +15,8 @@ By default, {productname} monitors these directories:
 
 * [path]``/var/lib/pgsql``
 * [path]``/var/spacewalk``
-* [path]``/var/cache /srv``
+* [path]``/var/cache``
+* [path]``/srv``
 
 You can change which directories are monitored with the [systemitem]``spacecheck_dirs`` parameter.
 You can specify multiple directories by separating them with a space.
@@ -48,7 +49,9 @@ spacecheck_free_critical = 5
 
 By default, {productname} will shut down the spacewalk services when the critical alert threshold is reached.
 
-You can disable this behavior with the [systemitem]``spacecheck_shutdown`` parameter.
+You can change this behavior with the [systemitem]``spacecheck_shutdown`` parameter.
+A value of ``true`` will enable the shut down feature.
+Any other value will disable it.
 
 For example:
 ----
