Removed out dated image

--- a/modules/reference/pages/systems/system-details/sd-properties.adoc
+++ b/modules/reference/pages/systems/system-details/sd-properties.adoc
@@ -1,9 +1,7 @@
 [[system-details-properties]]
 = SD Properties
 
-This subtab allows you to alter basic properties of the selected system.
-
-image::system_details_traditional_edit.png[scaledwidth=80%]
+The [guimenu]``Properties`` subtab allows you to alter basic properties of the selected system.
 
 System Details::
 
