--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -1,7 +1,7 @@
 [[update.suse.manager.proxy]]
 = Update {productname} Proxy
 
-{productname} Proxies are managed as clients by {productname}.
+{productname} Proxies are managed in the same way as clients.
 Thus patches and package updates combined as maintenance updates (MU) are to be installed with {productname} as it is done with other {productname} clients.
 When the update is installed, you must check whether a restart of the proxy service is required.
 
