--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -2,7 +2,7 @@
 = Update {productname} Proxy
 
 {productname} Proxies are managed in the same way as clients.
-Thus patches and package updates combined as maintenance updates (MU) are to be installed with {productname} as it is done with other {productname} clients.
+Maintenance updates (MU) can be installed on a {productname} Proxy in the same way as other clients.
 When the update is installed, you must check whether a restart of the proxy service is required.
 
 // a remote command (or a salt state) can perform the restart.
