--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -3,7 +3,7 @@
 
 {productname} Proxies are managed in the same way as clients.
 Maintenance updates (MU) can be installed on a {productname} Proxy in the same way as other clients.
-When the update is installed, you must check whether a restart of the proxy service is required.
+Some updates will require a restart of the proxy service.
 
 // a remote command (or a salt state) can perform the restart.
 // Creating an Action Chain can help with this task.
