--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -17,7 +17,7 @@ Some updates will require a restart of the proxy service.
 
 
 
-== Before You Begin
+== Prepare to Upgrade
 
 Before you perform any proxy upgrade, schedule a maintenance window.
 The clients registered to {productname} via the proxy will not be able checking in with {productname} for that period of time.
