--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -20,7 +20,7 @@ Some updates will require a restart of the proxy service.
 == Prepare to Upgrade
 
 Before you perform any proxy upgrade, schedule a maintenance window.
-The clients registered to {productname} via the proxy will not be able checking in with {productname} for that period of time.
+The clients registered to {productname} through the proxy will not be able to connect to {productname} while the upgrade is in progress.
 For more information about maintenance windows, see xref:administration/maintenance-window.adoc[].
 
 
