--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -28,6 +28,8 @@ For more information about maintenance windows, see xref:administration/maintena
 
 == Update the Proxy
 
+To update a proxy you first stop the proxy service, then update the software and finally restart the proxy service.
+
 .Procedure: Updating the {productname} Proxy
 
 . From the {productname} Server, where the Proxy is registered as a client, send the [command]``spacewalk-proxy stop`` command.
