--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -32,7 +32,11 @@ To update a proxy you first stop the proxy service, then update the software and
 
 .Procedure: Updating the {productname} Proxy
 
-. From the {productname} Server, where the Proxy is registered as a client, send the [command]``spacewalk-proxy stop`` command.
+. On the {productname} Server where the proxy is registered as a client, stop the proxy service:
++
+----
+spacewalk-proxy stop
+----
 
 . Select the packages to be updated on the Proxy.
 
