--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -38,7 +38,7 @@ To update a proxy you first stop the proxy service, then update the software and
 spacewalk-proxy stop
 ----
 
-. Select the packages to be updated on the Proxy.
+. Select the packages to be updated on the proxy.
 
 . From the {productname} Server, where the Proxy is registered as a client, send the [command]``spacewalk-proxy start`` command.
 
